--- a/procedure/code/RPL-Report.Rmd
+++ b/procedure/code/RPL-Report.Rmd
@@ -47,7 +47,9 @@ knitr::opts_chunk$set(
   fig.width = 6.5,
   fig.path = paste0(here("results", "figures"), "/"),
   warning = FALSE,
-  message = FALSE
+  message = FALSE,
+  tidy.opts = list(width.cutoff = 60),
+  tidy = TRUE
 )
 
 # set working directory as the project folder
@@ -69,8 +71,11 @@ To adjust for effect of connectivity on PA efficacy, we computationally reproduc
 We find that ...
 
 This document presents our replication and extension of Brodie et al. (2023). 
-Our computational reproduction of the authors' original analysis is presented in *Reproduction Report for Brodie et al. (2023)*.
-All data and materials needed to fully reproduce the results of this paper are publicly available at GitHub (LINK) with the identifier PROJECT DOI and Figshare (LINK) with the identifier DATA DOI.
+All data and materials needed to fully reproduce the results of this paper are publicly available in an Open Science Framework project repository with the identifier PROJECT DOI that links to GitHub (LINK)  and data and results stored on figshare (LINK) with the identifier DATA DOI.
+This document is the produce of a computational notebook (RPL_Report.Rmd) available in that project repository. 
+That computational notebook contains the code used to produce the results presented in this report. 
+For brevity and legibility, we have suppressed some longer section of code here.
+A computational reproduction of the authors' original analysis is also available in the project repository - *Reproduction Report for Brodie et al. (2023)*.
 
 
 # Study design
@@ -78,8 +83,13 @@ We adopt the statistical approach of the original analysis and test the sensitiv
 Using propensity score matching to control for the confounds of location, site accessibility, and forest structure, Brodie et al. fit a linear mixed-effects model to measure the effect of PA status on bird and mammal biodiversity.
 The response variable examined in the study were three measures of biodiversity measured for both mammals and birds - Species richness (SR), Functional richness (FR), and Phylogenetic diversity (PD).
 The response variables were derived from 1,079 sampling locations in the eBird database and 1,365 camera stations deployed across the region. 
-The primary predictor of interest was a binary measure indicating whether a observation site was located inside or outside a PA.
-Predictor variables measuring PA status, site accessibility, forest structure, understory density, and human development pressure were derived from the World Database of Protected Areas, the NASA Global Ecosystem Dynamics Investigation (GEDI) mission, and the UN Development program Human Development Index.
+
+The primary predictor of interest was binary measures indicating whether a observation site was located inside or outside a PA.
+The primary predictors of interest for a secondary analysis of spillover and leakage effects in areas surrounding PAs were the size of the nearest PA and the distance to the nearest PA.
+This secondary analysis was conducted only for observatio sites located outside PAs.
+Primary predictors measuring PA status were derived from the World Database of Protected
+Areas. 
+Additional predictors used to deconfound for site accessibility, forest structure, understory density, and human development pressure were derived from the NASA Global Ecosystem Dynamics Investigation (GEDI) mission, and the UN Development program Human Development Index. Site accessibility was measured using circuit theory-based metrics of proximity to human development1. Forest structure and understory density were measured use three-dimensional metrics derived from GEDI mission.
 
 We conduct two related analyses to evaluate and extend the work of the Brodie et al. (2023). 
 
@@ -97,9 +107,21 @@ Brodie et al. find evidence that large PAs are associated with higher biodiversi
 The authors found that distance to the nearest PA was significantly associated with only mammal biodiversity.
 Our primary hypotheses are:
 
-> HA-2a: The total area of the protected area located closest to an unprotected observation site alters the level of mammalian of avian biodiversity observed at that site when adjusting for the confounds of site accessibility, habitat condition, and the socioeconomic development, **and protected area connectivity**.
+> HA-2a: The total area of the protected area located closest to an unprotected observation site
+alters the level of mammalian of avian biodiversity observed at that site when adjusting for the confounds of site accessibility, habitat condition, and the socioeconomic development, **and protected area connectivity**.
 
-> HA-2b: The distance to the protected area located closest to an unprotected observation site alters on the level of mammalian of avian biodiversity observed at that site when adjusting for the confounds of site accessibility, habitat condition, and the socioeconomic development, **and protected area connectivity**..
+> HA-2b: The distance to the protected area located closest to an unprotected observation site
+alters on the level of mammalian of avian biodiversity observed at that site when adjusting for the confounds of site accessibility, habitat condition, and the socioeconomic development, **and protected area connectivity**..
+
+While Brodie et al. did not include measures of ecologically-focused landscape connectivity in their analyses, their work does in fact mirror our own interest in connectivity.
+First, the authors recognize the importance of human-focused connectivity through their site accessibility measure.
+Second, the analyses of spillovers performed in the study are essentially highly localized forms of connectivity analysis. 
+Functionally, connectivity metrics are largely, if not entirely, determined by distance relationships and area sizes of land covers or land uses in a landscape. 
+The specifications of the mixed effects models testing for spillover or leakage effects alternatively focus attention on the size an adjacent PA or the distance to an adjacent PAs. 
+When the effect of the size of the adjacent PA is the focus, distance to that adjacent PA is controlled for. 
+When the effect of distance to the adjacent PA is the focus, the size of that adjacent PA is controlled for. 
+This approach reduces the ecological analysis of connectivity to the protected landscape adjacent to a site.
+However, there are several reasons why connections to other protected areas might effect these local effects and the efficacy of PAs - motivaing our extended analysis.
 
 
 # Materials and Procedure
@@ -107,45 +129,69 @@ Our primary hypotheses are:
 ## Computational Reproduction
 This replication attempt builds on our computational reproduction of Brodie et al. (2023).
 We use the same computational environments, data, and data preparation procedure adopted in that work. 
-Complete details of the materials and methods use are available in *Reproduction Report for Brodie et al. (2023)* and can be evaluated in depth by examining the functions called throughout this document. 
-All materials and procedures are publicly available at GitHub **(LINK)** with the identifier **PROJECT DOI**.
+Complete details of the materials and methods used are available in *Reproduction Report for Brodie et al. (2023)* and can be evaluated in depth by examining the functions called throughout this document. 
+Overall our workflow (Fig. 1) uses seven functions to prepare, process, and statistically analyze our data.
+Additional functions used to create figures are called in our computational notebook and available in the project repository.
 
-```{r package setup, echo = TRUE, results = 'hide', message = FALSE, warning = FALSE, eval = TRUE}
-source(here("procedure/code/kick_off.R"))
-# Load required packages and scripts
-kick_off('procedure/code')
-```
+![**Fig 1.** Replication Workflow](/results/figures/Workflow_Diagram.png)
+
 
 ## Connectivity Measures
-We measured site connectivity as the area-weighted flux (AWF) of species observation sites and the surrounding landscape. 
-Area-weighted flux measures flow, weighted by protected area, between all sites as
+We measure site connectivity as the area-weighted flux (AWF) of species observation sites and the surrounding landscape. 
+In this application, $AWF$ measures flow, weighted by PA area, between all observation sites as,
 
 \begin{align*}
-AWF=  
-p_{ij}=e^{-k*d_{ij}} 
+$AWF = \sum_{j}^{n}\sum_{j,i \ne j}^{n} p_{ij} \cdot a_i \cdot a_j$
+$p_{ij} = e^{- \theta \cdot  d_{ij}}$
+$\theta = \frac{-\ln(0.5)}{d_{med}} $
 \end{align*}
 
 where 
-$p_{ij}$ is the probability of dispersal between two sites $i$ and $j$, $k$ is a median dispersal distance at which $p_{ij} = 0.5$, and $d_{ij}$ is the observed distance between $i$ and $j$. 
+$p_{ij}$ is the probability of dispersal between two sites $i$ and $j$, $a_i$ and $a_j$ are the areas of PAs $i$ and $j$, $d_{ij}$ is the observed distance between $i$ and $j$, and $d_{med}$ is a median dispersal distance at which $p_{ij} = 0.5$. 
 
-To construct our site and PA connectivity measures, we independently gathered data on PA geographies from the the World Database on Protected Areas [https://www.protectedplanet.net/en/thematic-areas/wdpa?tab=WDPA](https://www.protectedplanet.net/en/thematic-areas/wdpa?tab=WDPA). The WDPA PA dataset was pre-processed using several steps to ensure accuracy and relevance for the study. First, we used the `wdpa_fetch` and `wdpa_clean` functions from the R package `wdpar` to query and clean the data. This involved excluding PAs that were not yet implemented or had limited conservation value, replacing missing data codes with NA values, converting point-based PAs into circular shapes that correspond to their reported extent, fixing topological errors, and removing overlapping areas (More details can be found in `wdpa_clean` function). Next, we selected only terrestrial PAs within the study area and merged physically connected PAs while separating those labeled as the same PA but not physically connected. The dataset was then clipped to the coastline to retain only terrestrial portions, and the areas for the reorganized PAs were recalculated. Finally, tiny residual areas (<0.01 km²) from the clipping process were removed. For clustering, PAs on the same continent were grouped, under the assumption that mammals cannot cross disconnected landmasses, and only PAs within the same cluster were considered when calculating landscape connectivity. Under the assumption that mammals cannot cross disconnected landmasses, PAs located on the same continent were grouped into clusters. For the purposes of calculating landscape connectivity for mammals, only the PAs within the same cluster (i.e., on the same continent) were considered, ensuring that the analysis reflected realistic movement limitations imposed by geographical barriers.
+To construct our site connectivity measures, we independently gathered data on PA geographies from the the World Database on Protected Areas [https://www.protectedplanet.net/en/thematic-areas/wdpa?tab=WDPA](https://www.protectedplanet.net/en/thematic-areas/wdpa?tab=WDPA). 
+The WDPA PA dataset was pre-processed using several steps to ensure accuracy and relevance for the study. 
+First, we used the `wdpa_fetch` and `wdpa_clean` functions from the R package `wdpar` to query and clean the data. 
+This process excluded PAs that were not yet implemented or had limited conservation value, replaced missing data codes with NA values, converted point-based PAs into circular shapes that correspond to their reported extent, fixed topological errors, and removed overlapping areas 
+Details about this procedures are available in the `wdpa_clean` function. 
 
-Once the PAs and their corresponding clusters were prepared, we began calculating the AWF for observation sites. As indicated by the equation, AWF calculation depends on the median dispersal distance. To assess the effect of varying dispersal distances, we computed AWF using a range of median dispersal distances: `r seq(10, 150, 10)`. For each specified dispersal distance, we identified the PAs within a buffer around each site, with the buffer size set to five times the given dispersal distance. For mammals, only PAs in the same continent as the observation site were included. The Euclidean distances between the observation site and the selected PAs were then used to calculate the AWF for that site.
+Next, we restricted our analysis by subsetting to those terrestrial PAs located within the study area. 
+We then merged administratively distinct, but physically connected PAs and segmented PAs that were part of the same administrative unit, but not physically connected. 
+The dataset was then clipped to the coastline to retain only the terrestrial portions of the PAs
+The areas for the reorganized PAs were recalculated. 
+This created PAs that better matched real world conditions and provided more representative measures of PA size for spillover and connectivity analyses.
+
+Finally, small residual areas (<0.01 km²) from the clipping process were removed. 
+We then grouped PAs on the same contiguous landmass, under the assumption that mammals cannot cross locations disconnected by large water bodies.  
+Only PAs located on the same landmass were considered when calculating landscape connectivity for mammals to allow the analysis to reflect realistic movement limitations imposed by geographical barriers.
+
+Once the PAs and their corresponding clusters were prepared, we began calculating the $AWF$ for observation sites. 
+Calculation of $AWF$ depends on the specification of a median dispersal distance. 
+To assess the effect of varying dispersal distances, we computed $AWF$ using a range of median dispersal distances between 10km and 150km. 
+For each specified dispersal distance, we identified the PAs around each site and within a buffer set to five times the dispersal distance 
+For mammals, only PAs in the same continent as the observation site were included. The Euclidean distances between the observation site and the selected PAs were then used to calculate the AWF for that site.
 
 ```{r calculate_conn, eval=FALSE, echo=TRUE, results='hide', message=FALSE}
+
+# Set directory path
+source(here("procedure/code/kick_off.R"))
+
+# Load required packages and scripts
+kick_off('procedure/code')
+
 # Calculate site connectivity for birds and mammals
 calc_conn(taxon = "bird", src_dir = src_dir, dst_dir = dst_dir)
 calc_conn(taxon = "mammal", src_dir = src_dir, dst_dir = dst_dir)
 ```
 
+
 ## Preparation of the Analytical Data Files
 
 Preparation of our analytical data file followed the procedures outlined in Brodie et al. (2023) and implemented in our computational reproduction. 
-Because that analysis did not analyze connectivity, we appended our calculated connectivity measures to that datafile and scaled those variables following the procedures of the original authors.
-Finally, we identified and removed outlier values from each dataset using **PROCEDURE INFO** and a list provided by Brodie et al. 
+Because Brodie et al. did not directly analyze landscape connectivity, we appended our calculated connectivity measures to the authors' original datafile and scaled those variables following the procedures used for other predictors.
 
 ```{r clean_data, eval=TRUE, echo=TRUE, results='hide', message=FALSE}
-# Clean data and remove outliers for bird and mammal models
+# Clean data for statistical analysis
 conn_metrics <- 'awf_ptg'
 src_dir <- "data/raw/public"
 conn_dir <- "data/derived/public"
@@ -154,11 +200,14 @@ dat_clean_bird <- clean_data("bird", conn_metrics, src_dir, conn_dir, dst_dir)
 dat_clean_mammal <- clean_data("mammal", conn_metrics, src_dir, conn_dir, dst_dir)
 ```
 
+
+
 # Statistical Results
 
-## STATEMENT OF FIND Efficacy
-We first used propensity score matching and a linear mixed effects model to assessed whether the finding that PA preserve vertebrate biodiversity within their boundaries persisted when adjusting for connectivity.
+## Implementation of the Linear Mixed Effects Model of PA Efficacy
+We first use propensity score matching and a linear mixed effects model to assess whether the finding that PA preserve vertebrate biodiversity within their boundaries persisted when adjusting for connectivity (**HA-1a**) and whether connectivity moderates any PA effects (**HA-1b**).
 Here we report connectivity results using a 100km threshold.
+Sensitivity analyses for alternative threshold are included in section 6.
 
 ```{r rpl_eff, eval=TRUE, echo=TRUE, results='hide', message=FALSE}
 # Make a common catalog
@@ -181,11 +230,15 @@ rpl_efficacy_mammal <- lapply(1:nrow(var_catalog), function(i){
 }); names(rpl_efficacy_mammal) <- sprintf("mod_mammal_eff_%s", var_catalog$name)
 ```
 
-## Linear Mixed Effects Model of PA Spillovers
+## Implementation of the Linear Mixed Effects Models of PA Spillovers
+We use propensity score matching and a linear mixed effects model to assess whether The the spillover effects of the total area of the nearest PA (**HA-2a**) or distance to the nearest PA (**HA-2b**) persist when accounting for PA connectivity to the larger PA network.
+It is worth noting that although the text and data file of the original article identify PA size and PA distance as continuous measures, they are in fact converted to binary indicators in the authors' code file. 
+Accordingly, we match this procedure and use the same threshold values applied in the binary conversion by Brodie et al. 
+For these specifications, we again report connectivity results using a 100km threshold.
+Sensitivity analyses for alternative threshold are included in section 6.
 
 ```{r rpl_spill, eval=TRUE, echo=TRUE, results='hide', message=FALSE}
 # Replicate spillover models for birds w/ connectivity
-## Lei, we need to change the outlier procedure in this function
 rpl_spill_bird <- lapply(1:nrow(var_catalog), function(i){
     mods <- lapply(c("BigPA", "CloseToPA"), function(bnr_var){
         model_pa_spillover(dat_clean_bird, "connec+", "bird", bnr_var, 
@@ -197,7 +250,6 @@ rpl_spill_bird <- lapply(1:nrow(var_catalog), function(i){
 }); rpl_spill_bird <- do.call(c, rpl_spill_bird)
 
 # Replicate spillover models for mammals w/ connectivity
-## Lei, we need to change the outlier procedure in this function
 rpl_spill_mammal <- lapply(1:nrow(var_catalog), function(i){
     mods <- lapply(c("BigPA", "CloseToPA"), function(bnr_var){
         model_pa_spillover(dat_clean_mammal, "connec+", "mammal", bnr_var, 
@@ -208,11 +260,13 @@ rpl_spill_mammal <- lapply(1:nrow(var_catalog), function(i){
     mods
 }); rpl_spill_mammal <- do.call(c, rpl_spill_mammal)
 
-# Concatenate them together
+# Concatenate the model results
 mods <- list("bird" = do.call(c, list(rpl_efficacy_bird, rpl_spill_bird)), 
              "mammal" = do.call(c, list(rpl_efficacy_mammal, rpl_spill_mammal)))
 ```
 
+
+## Statistical Results of the Replication Attempts
 ```{r rpl_spill_tab, echo = FALSE, message = FALSE, warning = FALSE, eval = TRUE}
 # Insert code to construct a summary table of efficacy models like Table 1 in Brodie et al.
 # Define variable convert table
@@ -292,7 +346,9 @@ for (i in 1:nrow(bold_ids)){
 names(coefs) <- c("Variable", "SR", "FR", "PD", "SR", "FR", "PD")
 cap <- paste0("Results from mixed-effects linear regression for ",
               "species richness (SR), functional richness (FR), ",
-              "and phylogenetic diversity (PD).")
+              "and phylogenetic diversity (PD). Following Brodie et al., 
+              bolding indicates predictors with estimated coefficients with 
+              p<0.05")
 coefs %>%
     kableExtra::kbl(escape = FALSE, full_width = FALSE, booktabs = TRUE,
                     caption = cap) %>% 
@@ -306,20 +362,34 @@ coefs %>%
                      align = "c")
 ```
 
+Overall, the statistical results of our replication (Table 1) were generally similar to those produced in the original analyses of Brodie et al. (Table 2).
+Focusing on the primary predictors of interest for the all sites PA efficacy model, our analysis preserved the direction of the originally estimated PA effects for both birds and mammals. 
+However, we also observed shifts in the estimated magnitude of the PA effect for the bird models and a change in the statistical significance of the PA effect for bird models estimated with SR and FR. 
+Specifically, the estimated magnitude of the PA effect for the SR model dropped to 28 percent of the originally estimated value, while the same effect estimate in the FR model dropped to 66 percent of the originally estimated value. 
+These new estimates were also not statistically significant at the p=0.05 level the original authors used to interpret their results.
+
+Connectivity was not a consistent predictor of bird biodiversty across the three response variables. 
+The estimated coefficients were negative and non-signficant for SD, negative and significant for FR, and positive and significant for PD. 
+Estimated coefficients of the interaction of PA status and connectivity also had different directions for different response variables, but all were non-significant. 
+Neither PA effects, connectivity, nor the PA-connectivity interaction were statistically significant for any of the mammal models.
+This final result is consistent with Brodie et al., who similarly found non-significant PA effects for mammals.
+
+The magnitude of the estimate of PA size effect in the FR model for birds is less than one-half the size of the effect estimated by Brodie et al.  
+
 ```{r compare_eff, echo = FALSE, message = FALSE, warning = FALSE, eval = TRUE}
 compare_eff <- data.frame(
     Change = c("Direction", "Magnitude", "Significance"),
     SR = c("$\\equiv$", "$\\downarrow$", "s $\\rightarrow$ ns"),
-    RF = c("$\\equiv$", "$\\downarrow$", "s $\\rightarrow$ ns"),
-    FD = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ s")) %>% 
+    FR = c("$\\equiv$", "$\\downarrow$", "s $\\rightarrow$ ns"),
+    PD = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ s")) %>% 
     cbind(data.frame(
     SR = c("$\\equiv$", "$\\uparrow$", "$\\equiv$ ns"),
-    RF = c("$\\equiv$", "$\\uparrow$", "$\\equiv$ ns"),
-    FD = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ ns")))
+    FR = c("$\\equiv$", "$\\uparrow$", "$\\equiv$ ns"),
+    PD = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ ns")))
 
 compare_eff %>%
     kableExtra::kbl(escape = FALSE, full_width = FALSE, booktabs = TRUE,
-                    caption = "Comparison of PA effacicy") %>% 
+                    caption = "Comparison of PA Efficacy") %>% 
     kable_paper() %>% 
     kable_styling(latex_options = c("scale_down", "hold_position"), 
                   font_size = 10) %>% 
@@ -337,17 +407,17 @@ compare_eff %>%
 compare_spl <- data.frame(
     Change = c("Direction", "Magnitude", "Significance"),
     SR = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ ns"),
-    RF = c("$\\equiv$", "$\\downarrow$", "s $\\rightarrow$ ns"),
-    FD = c("$\\equiv$", "$\\uparrow$", "$\\equiv$ s")) %>% 
+    FR = c("$\\equiv$", "$\\downarrow$", "s $\\rightarrow$ ns"),
+    PD = c("$\\equiv$", "$\\uparrow$", "$\\equiv$ s")) %>% 
     cbind(data.frame(
         SR = c("$\\equiv$", "$\\uparrow$", "s $\\rightarrow$ ns"),
-        RF = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ s"),
-        FD = c("$\\equiv$", "$\\downarrow$", "s $\\rightarrow$ ns"))) %>% 
+        FR = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ s"),
+        PD = c("$\\equiv$", "$\\downarrow$", "s $\\rightarrow$ ns"))) %>% 
     rbind(data.frame(
         Change = c("Direction", "Magnitude", "Significance"),
         SR = c("$\\equiv$", "$\\uparrow$", "$\\equiv$ s"),
-        RF = c("$\\equiv$", "$\\uparrow$", "ns $\\rightarrow$ s"),
-        FD = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ ns")) %>% 
+        FR = c("$\\equiv$", "$\\uparrow$", "ns $\\rightarrow$ s"),
+        PD = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ ns")) %>% 
             cbind(data.frame(
                 SR = c("$\\equiv$", "$\\uparrow$", "ns $\\rightarrow$ s"),
                 RF = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ ns"),
@@ -370,6 +440,10 @@ compare_spl %>%
         "for decrease, and $\\\\uparrow$ is for increase."),
         escape = FALSE, threeparttable = TRUE)
 ```
+
+# Discussion
+
+- PA size statistics. What is the difference in the mean PA sizes between brodie and our combined PAs? Std? Could this link with the PA size effects?
 
 # Sensitivity Analyses
 
@@ -418,5 +492,5 @@ taxon_dist_plot$mammal$`Species richness (SR)` +
     theme(plot.title = element_text(hjust = 0.5))
 ```
 
-# Discussion
+
 
